--- a/header.css
+++ b/header.css
@@ -45,6 +45,14 @@ header{
     color: antiquewhite;
 }
 
+#Nav-Button>div{
+    width: 30px;
+    height: 3px;
+    background-color: wheat;
+    margin-top: 6px;
+    border-radius: 50px;
+}
+
 #Navigation-Screen{
     top: 0%;
     height: 100%;
